# patterns

./: CMakeLists.txt  README.md  abstractFactory.h  builder.h  chain_of_responsobility.h  facade.h  flyweight.hpp  main.cpp  observer.h  template_method.h
